@@ -65,6 +65,7 @@ The contents of this repository are licensed as follows:
 --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
 --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
 --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
 --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
 ```
